feat(apartment): create apartment model
