# app/Models/Apartment/Apartment.php
@@ -1,0 +1,14 @@
+<?php
+
+namespace App\Models\Apartment;
+
+use Illuminate\Database\Eloquent\Model;
+
+class Apartment extends Model
+{
+    protected $fillable = [
+        'number', 'block'
+    ];
+
+    protected $guarded =[];
+}
