# app/Models/Apartment/ApartmentSWG.php
@@ -1,0 +1,37 @@
+<?php
+
+namespace App\Models\Apartment;
+
+use Illuminate\Database\Eloquent\Model;
+
+class ApartmentSWG extends Model
+{
+/**
+ * @OA\Schema(
+ *     schema="Apartment",
+ *     title="Apartment",
+ *     description="Apartment model",
+ *     @OA\Property(
+ *      property="id",
+ *      type="integer",
+ *      description="Apartment's id",
+ *      title="id",
+ *      example="1"    
+ *     ),
+ *     @OA\Property(
+ *      property="number",
+ *      type="integer",
+ *      description="Apartment's number",
+ *      title="number",
+ *      example="104"    
+ *     ),
+ *     @OA\Property(
+ *      property="block",
+ *      type="string",
+ *      description="Apartment's block",
+ *      title="block",
+ *      example="A"    
+ *     )
+ * )
+*/
+}
